--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -15,7 +15,7 @@
                 <a href="{{ url_for('questions') }}">
                     <h2 class="nav">Home</h2>
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a>
+                <a href="{{ url_for('reviews') }}">
                     <h2 class="nav">Reviews</h2>
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="{{ url_for('profile') }}">
