--- a/static/css/style.css
+++ b/static/css/style.css
@@ -443,15 +443,13 @@ th, td {
 
 .questionButton {
     background: linear-gradient(to right, #00b7ff, #ffffc7);
-    margin-right: 2%;
-    margin-left: auto;
     border-radius: 40px;
     color: #272638;
-    height: 3%;
+    height: .5%;
     outline: white;
     font-family: fontBold;
     font-size: 17px;
-    padding: 2%;
+    padding: 1.5%;
     display: inline-block;
     text-align: center;
 }
@@ -621,10 +619,10 @@ th, td {
 }
 
 .tabs {
-    position: relative;   
+    position: relative;
     min-height: 200px;
     clear: both;
-    margin: 25px 0;
+    margin: 35%;
 }
 
   .tab {
@@ -633,7 +631,7 @@ th, td {
 
   .tab label {
     background: #272638; 
-    padding: 10px; 
+    padding: 10px;
     margin-left: -1px; 
     position: relative;
     left: 1px;
