--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -28,7 +28,7 @@
         </div>
 
         <form method="GET" action="./new_review">
-            <button class="postButton">Post a Review</button>
+            <button class="reviewButton">Post a Review</button>
         </form>
 
 	    <div class="reviews">
@@ -56,7 +56,7 @@
                                 <div class="buttonDiv">
                                     <div class="edit">
                                         <td>
-                                            <form action="{{ url_for('update_review', review_id=review.id) }}" method="get">
+                                            <form action="{{ url_for('update_review', review_id=review.id) }}" method="GET">
                                                 <button type="submit" value="Edit" class="questionButton">Edit</button>
                                             </form>
                                         </td>
