--- a/templates/profile.html
+++ b/templates/profile.html
@@ -67,6 +67,13 @@
                         {% endfor %}
                     </div>
                 </div>
+                <div class="tab">
+                    <input type="radio" id="tab-3" name="tab-group-1">
+                    <label for="tab-3" class="tab">Likes</label>
+                    <div class="content">
+                        <p>Test</p>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
