--- a/static/css/style.css
+++ b/static/css/style.css
@@ -445,11 +445,11 @@ th, td {
     background: linear-gradient(to right, #00b7ff, #ffffc7);
     border-radius: 40px;
     color: #272638;
-    height: .5%;
+    height: 1%;
     outline: white;
     font-family: fontBold;
     font-size: 17px;
-    padding: 1.5%;
+    padding: 1%;
     display: inline-block;
     text-align: center;
 }
@@ -457,7 +457,7 @@ th, td {
 
 .reviewButton {
     display: relative;
-    margin-left: auto;
+    margin-left: 2%;
     margin-right: auto;
     margin-top: 20px;
     background: linear-gradient(to right, #00b7ff, #ffffc7);
