--- a/templates/new_review.html
+++ b/templates/new_review.html
@@ -38,7 +38,7 @@
                         {% if review %}
                             <textarea name="body" rows="15" cols="0" class="body">{{ review.body }}</textarea>
                         {% else %}
-                            <textarea name="body" rows="15" cols="0" class="body">Type your review here!</textarea>
+                            <textarea name="body" rows="15" cols="0" class="body" title="Type your review here!"></textarea>
                         {% endif %}
                     </p>
                     <p>
